Fix linter issues.

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,13 @@ namespace_packages = True
 [mypy-numpy.*]
 ignore_missing_imports = True
 
+[mypy-pybobyqa.*]
+ignore_missing_imports = True
+
 [mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-skopt.*]
 ignore_missing_imports = True
 
 [mypy-gym.*]
@@ -21,12 +27,4 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pyjapc.*]
-ignore_missing_imports = True
-
-# Java packages accessed through JPype1.
-
-[mypy-cern.*]
-ignore_missing_imports = True
-
-[mypy-java.*]
 ignore_missing_imports = True
