--- a/setup.cfg
+++ b/setup.cfg
@@ -49,11 +49,18 @@ all =
     %(cernml-es)s
     %(bobyqa)s
     %(skopt)s
+test =
+    %(all)s
+    pytest
+    pytest-cov
+examples:
+    %(all)s
+    matplotlib
 lint =
-    black == 21.5b0
-    mypy == 0.812
-    pycodestyle == 2.6.0
-    pylint == 2.8.2
+    black == 22.8.0
+    mypy == 0.982
+    pycodestyle == 2.9.1
+    pylint == 2.15.3
 
 [pycodestyle]
 max-doc-length = 72
