Make use of new FunctionOptimizable.override_skeleton_points().
This is a prototype way to solve geoff/geoff-app#30.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ known_first_party = ['cernml']
 
 [tool.pytest.ini_options]
 addopts = '--doctest-modules'
-testpaths = ['src']
+testpaths = ['src', 'tests']
 
 [tool.pylint.format]
 ignore-long-lines = '<?https?://\S+>?$'
