--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ include:
     file: v2/python.gitlab-ci.yml
 
 variables:
-  PY_VERSION: "3.7"
-  ACC_PY_BASE_IMAGE_TAG: '2020.11'
+  PY_VERSION: "3.9"
+  ACC_PY_BASE_IMAGE_TAG: '2021.12'
   project_package: cernml.loops
   project_name: cernml-coi-loops
 
@@ -21,17 +21,19 @@ build_wheel:
 test_lint:
   extends:
     - .acc_py_dev_test
+    - .acc_py_run_on_all_currently_supported
   stage: test
   before_script:
     - !reference [.acc_py_dev_test, before_script]
-    - python -m pip install
-      -e ${project_root}[lint]
+    - python -m pip install ${project_root}[lint]
   script:
     - cd ${project_root}
-    - ./run_linters.sh ./src
+    - ./run_linters.sh ./src ./examples ./tests
 
 test_dev:
-  extends: .acc_py_dev_test
+  extends:
+    - .acc_py_dev_test
+    - .acc_py_run_on_all_currently_supported
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
   # Override `script` to change the precise pytest-cov arguments.
   script:
@@ -47,6 +49,7 @@ test_dev:
 test_examples:
   extends:
     - .acc_py_run_on_manylinux_py_version
+    - .acc_py_run_on_all_currently_supported
   before_script:
     - !reference [.acc_py_run_on_manylinux_py_version, before_script]
     - python -m pip install
@@ -57,7 +60,9 @@ test_examples:
     - python comparison.py -n1 ALL
 
 test_wheel:
-  extends: .acc_py_wheel_test
+  extends:
+    - .acc_py_wheel_test
+    - .acc_py_run_on_all_currently_supported
   # Override `script` to adjust the pytest arguments.
   script:
     - mkdir -p ~/not-the-source-dir && cd ~/not-the-source-dir
