--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2020-2023 CERN
+# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
+# SPDX-FileNotice: All rights not expressly granted are reserved.
+#
+# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+
+
 [build-system]
 requires = [
     'pip >= 22',
@@ -54,9 +60,15 @@ examples = [
 lint = [
     'cernml-coi-loops[examples]',
     'black',
-    'mypy',
-    'pycodestyle',
-    'pylint',
+    'flake8',
+    # Flake8 6.0 doesn't support Python 3.7, so we need to downgrade.
+    # 4.0 and 5.0 have a `importlib-metadata` requirement that conflicts with
+    # gym 0.21.
+    'flake8 < 4; python_version < "3.8"',
+    'flake8-length',
+    'mypy ~= 1.0',
+    'pylint ~= 2.17.0',
+    'reuse',
     # For `Self` and `TypeGuard`:
     'typing-extensions>=4.0; python_version<"3.11"',
 ]
