--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,8 @@ disable = [
 
 [tool.mypy]
 disallow_untyped_defs = true
+explicit_package_bases = true
+mypy_path = '$MYPY_CONFIG_FILE_DIR/src'
 
 [[tool.mypy.overrides]]
 module = [
