--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ description = 'Optimization Loops for the Common Optimization Interfaces'
 readme = 'README.md'
 license = {file='COPYING'}
 dependencies = [
-    'cernml-coi ~=0.8.9',
+    'cernml-coi ~=0.8.13',
+    'cernml-coi-optimizers ~= 1.0',
 ]
 classifiers = [
     'Development Status :: 3 - Alpha',
@@ -43,19 +44,8 @@ classifiers = [
 gitlab = 'https://gitlab.cern.ch/geoff/cerml-coi-loops'
 
 [project.optional-dependencies]
-cernml-es = ['cernml-extremum-seeking ~= 2.0']
-bobyqa = ['Py-BOBYQA ~= 1.2']
-skopt = ['scikit-optimize ~= 0.9.0']
-all = ['cernml-coi-loops[cernml-es,bobyqa,skopt]']
-test = [
-    'cernml-coi-loops[all]',
-    'pytest',
-    'pytest-cov',
-]
-examples = [
-    'cernml-coi-loops[all]',
-    'matplotlib ~= 3.0',
-]
+test = ['pytest', 'pytest-cov']
+examples = ['matplotlib ~= 3.0']
 
 [tool.setuptools_scm]
 
